<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.madhu.emailapp_original.AddInfoActivity"
    android:padding="15dp">


    <EditText
        android:id="@+id/editText_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/hint_fname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_fname"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/hint_lname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/hint_emailadd"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/editText_lname" />

    <Button
        android:id="@+id/button_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/upload"
        android:theme="@style/ThemeOverlay.MyDarkButton" />
</RelativeLayout>
